[gd_scene load_steps=4 format=3 uid="uid://bvqtn58j0hpn8"]

[ext_resource type="Script" uid="uid://uleqawk6odw3" path="res://entities/game_logic/scroller/scroller.gd" id="1_kcmbr"]
[ext_resource type="PackedScene" uid="uid://c6jh8y2f5figg" path="res://entities/ui/camera/main_camera.tscn" id="2_t4c0m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t4c0m"]
size = Vector2(400, 48)

[node name="Scroller" type="Node2D"]
script = ExtResource("1_kcmbr")

[node name="MainCamera" parent="." instance=ExtResource("2_t4c0m")]

[node name="BottomArea" type="Area2D" parent="."]
position = Vector2(192, 192)
collision_layer = 2
collision_mask = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomArea"]
shape = SubResource("RectangleShape2D_t4c0m")

[node name="TopArea" type="Area2D" parent="."]
position = Vector2(192, 24)
collision_layer = 2
collision_mask = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopArea"]
shape = SubResource("RectangleShape2D_t4c0m")

[connection signal="body_entered" from="BottomArea" to="." method="bottom_area_entered"]
[connection signal="body_exited" from="BottomArea" to="." method="bottom_area_exited"]
[connection signal="body_entered" from="TopArea" to="." method="top_area_entered"]
[connection signal="body_exited" from="TopArea" to="." method="top_area_exited"]
